--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2814,3 +2814,54 @@ li a.nav-link:hover {
 li a.dashboard:hover{
   color:blue;
 }
+
+.bayangan{
+  position:relative;
+
+  background: linear-gradient(0deg , #000 ,#262626);
+}
+
+.bayangan:before,
+.bayangan:after{
+  content:'';
+  position: absolute;
+  left:-2px;
+  top:-2px;
+  background: linear-gradient(45deg , #fb0094 , #0000ff,#ffff00,#ff0000 , #fb0094 , #0000ff,#ffff00,#ff0000);
+  background-size: 400%;
+  width:calc(100% + 4px);
+  height: calc(100% + 4px);
+  z-index:-1;
+  animation:animate 20s linear infinite;
+}
+
+.bayangan:after{
+  filter: blur(20px);
+}
+
+@keyframes animate{
+  0%
+  {
+
+  }
+  50%
+  {
+    background-position: 300% 0;
+  }
+  100%
+  {
+
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
